src/style.css
/* ... */
.ts-control.required:not(.focus, .full),
input:required:not(:valid, :focus, .mdc-text-field__input) {
  background-color: beige;
}

textarea {
  resize: none;
}

.drag-area {
  flex: 1;
  -webkit-app-region: drag;
}

.window-action {
  display: flex;
  align-items: center;
  padding: 0.8rem 1.2rem;
  transition: var(--transition);
}

.window-action--red:hover {
  background-color: var(--mdc-theme-error);
  color: var(--mdc-theme-on-error);
}

.window-action svg {
  fill: currentColor;
}

svg.maximize {
  border: 1px solid currentColor;
  width: 10px;
  height: 10px;
}

svg.restore path {
  d: path("m 2 0.00001 l 0 2 l -2 0 l 0 8 l 8 0 l 0 -2 l 2 0 l 0 -8 Z m 1 1 l 6 0 l 0 6 l -1 0 l 0 -5 l -5 0 Z m -2 2 l 6 0 l 0 6 l -6 0 Z");
}

#buttonDrawer {
  padding: 0.25rem 0.75rem;
  display: flex;
  align-items: center;
}

#buttonDrawer:active>.mdi {
  transform: scale(0.75);
}

#buttonDrawer>.mdi {
  transition: var(--transition);
}

.flex {
  display: flex;
}

.table {
  margin: 0;
  min-width: max-content;
}

.table-responsive {
  min-height: 7.3rem;
}

.panel-wide {
  max-width: 74vw;
}

tbody>tr {
  text-shadow: 0 0;
  transition: filter var(--transition);
  box-shadow: inset 0 -1px #000, inset 0 1px #000;
}

tbody>tr:last-child {
  box-shadow: inset 0 1px #000;
}

tbody>tr:first-child {
  box-shadow: inset 0 -1px #000;
}

tbody>tr:first-child:last-child {
  box-shadow: none;
}

#cases>tbody>tr.selected,
#cases>tbody>tr.selected:first-child:last-child {
  box-shadow: inset 0 0 0 4px #fff;
}

tbody>tr.selected,
tbody>tr.selected:first-child:last-child {
  box-shadow: inset 0 0 0 4px var(--mdc-theme-primary);
}

tbody>tr>td {
  max-width: 20rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

tbody>tr>td:not(:first-child) {
  border-left: 2px solid #000;
  box-shadow: inset 1px 0 transparent, inset -1px 0 transparent;
}

#cases>tbody>tr.selected>td {
  border-color: #fff;
  box-shadow: inset 1px 0 #fff, inset -1px 0 #fff;
}

tbody>tr.selected>td {
  border-color: var(--mdc-theme-primary);
  box-shadow: inset 1px 0 var(--mdc-theme-primary), inset -1px 0 var(--mdc-theme-primary);
}

tbody>tr>td.found {
  text-shadow: 0 0 20px currentColor;
  background-color: rgba(255, 255, 255, 0.5);
  font-weight: 500;
}

th {
  background-color: var(--bs-light) !important;
  cursor: pointer;
  transition: opacity var(--transition);
  user-select: none;
}

th:active {
  cursor: grabbing;
}

.table th {
  position: sticky;
  top: 0;
}

.table th:not(:first-child) {
  border-left: 2px solid var(--bs-gray-500);
}

th>label {
  cursor: inherit;
}

.helper-text {
  height: 1rem;
  overflow: hidden;
  transition: var(--transition);
}

.helper-text.hide {
  height: 0;
  margin: 0;
  opacity: 0;
}

.helper-text>.mdi {
  font-size: .875rem;
  margin-right: .25rem;
}

.list-group:empty {
  display: none;
}

.list-group>th {
  cursor: grab;
  padding: .75rem 1.25rem;
}

.list-group>th:not(:first-child) {
  border-top: 2px solid var(--bs-gray-500);
}

.list-group>th:active {
  cursor: grabbing;
}

.list-group>th:first-child {
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
}

.list-group>th:last-child {
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}

.list-group>th .mdi {
  display: none;
}

.list-group-flush:not(:empty) {
  border-radius: .5rem;
  border: 1px solid rgba(0, 0, 0, .125);
}

.sub-list-group {
  height: 5rem;
  width: 94%;
  overflow: hidden;
  will-change: height;
  transition: var(--transition);
}

.sub-list-group.collapsed {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
  height: 0;
  border: 0;
  opacity: 0;
}

.list-group-item {
  min-height: 52px;
  transition: var(--transition);
  transition-property: color, background-color, border-color;
}

.list-group-item.active {
  cursor: default;
  pointer-events: none;
}

.list-group-item.active>*:enabled {
  pointer-events: initial;
}

.list-group-item.active .mdc-button--red {
  color: inherit;
}

.list-group-item.active>:disabled .mdi {
  color: #fff;
}

.list-group-flush.list-group-item {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.list-group-flush.list-group-item+.list-group {
  border-top-right-radius: 0;
  border-top-left-radius: 0;
}

#addressList>.list-group-item b,
#hotelsList>.list-group-item b {
  cursor: text;
  pointer-events: auto;
}

#addressList>.list-group-item b.disabled,
#hotelsList>.list-group-item b.disabled {
  pointer-events: none;
  user-select: text;
}

#permissionsList .list-group-item {
  min-height: auto;
}

#tableColumnsList {
  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, .5));
}

#tableOverlay {
  width: 100%;
  height: calc(100% - 8.3rem);
  bottom: 0;
  position: absolute;
  place-self: center;
  place-content: center;
  border-radius: inherit;
  backdrop-filter: blur(10px) grayscale(1);
  background-color: #ffffffbf;
  color: var(--mdc-theme-text-disabled-on-background);
  transition: var(--transition);
  z-index: 1;
}

#tableOverlay.hide {
  user-select: none;
  pointer-events: none;
  opacity: 0;
}

#tableOverlay.show-headers {
  height: calc(100% - 11rem);
}

#tableOverlay>* {
  margin: 0 auto;
  user-select: none;
}

#tableOverlay>.mdi {
  font-size: 5rem !important;
}

#tableOverlay>.mdi-loading {
  animation: rainbow 5s cubic-bezier(0.4, 0, 0.2, 1) infinite;
}

#tableOverlay>.mdi-loading::before {
  transition: none;
}

#toolsPanel>.mdc-card:first-child {
  margin-bottom: 1rem;
}

.mdc-list-item>.mdi,
.modal-header>.mdi {
  font-size: 1.25rem;
}

.modal-header>.dropdown-icon {
  margin-right: .25rem;
}

.modal-title {
  line-height: 1;
}

.modal-body {
  max-height: 60vh;
  overflow: auto;
  transition: var(--transition);
  will-change: contents;
}

.modal-body>*:first-child {
  margin-top: 0;
}

#toolsPanel {
  max-width: 20.5rem;
}

form {
  overflow: auto;
}

form#editCase {
  line-height: normal;
  height: inherit;
}

#filter .col-md-12 {
  height: 4rem;
  transition: var(--transition);
}
/* ... */

